mise a jour contact info

--- a/index.html
+++ b/index.html
@@ -142,8 +142,9 @@
       <p>
         40 rue Pierre Chantelauze
         79000 NIORT
-        Tél : 3936
-      9:00 à 17:00 du Lundi au Vendredi</p>
+        Tél : 3936 </p>
+      <br>
+      <p>Ouvert de 9:00 à 17:00 du Lundi au Vendredi</p></>
     </section>
     <!-- ##### Footer-->
     <footer id="actualites" class="footer">
